--- a/docs/Intro (LAS 1.2 files).ipynb
+++ b/docs/Intro (LAS 1.2 files).ipynb
@@ -8,6 +8,14 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Intro (LAS 1.2 files)"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
