Testing ipynb format conversion

--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Intro (LAS 1.2 files)"
+      "reading and viewing a log file (1.2)"
      ]
     },
     {
