--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -16,6 +16,26 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import las_reader\n",
+      "print las_reader.__version__"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "unknown\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -26,9 +46,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import las_reader           \n",
       "log = las_reader.read('https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las')\n",
-      "type(log)"
+      "print type(log)"
      ],
      "language": "python",
      "metadata": {},
@@ -64,19 +83,12 @@
         "DATE.            LOG DATE:   25-DEC-1988\n",
         "['DATE', None, 'LOG DATE', '25-DEC-1988']\n",
         "UWI .      UNIQUE WELL ID:   100091604920W300\n",
-        "['UWI', None, 'UNIQUE WELL ID', '100091604920W300']\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
-       "text": [
-        "las_reader.LASFile"
+        "['UWI', None, 'UNIQUE WELL ID', '100091604920W300']\n",
+        "<class 'las_reader.LASFile'>\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
