more fiddling with ipynbs

--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -19,21 +19,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import las_reader\n",
-      "print las_reader.__version__"
+      "import las_reader"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "unknown\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -56,34 +47,6 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "VERS.                  1.2:   CWLS LOG ASCII STANDARD -VERSION 1.2\n",
-        "['VERS', None, '1.2', 'CWLS LOG ASCII STANDARD -VERSION 1.2']\n",
-        "WRAP.                  NO:   ONE LINE PER DEPTH STEP\n",
-        "['WRAP', None, 'NO', 'ONE LINE PER DEPTH STEP']\n",
-        "STRT.M        1670.000000:\n",
-        "['STRT', 'M', '1670.000000', '']\n",
-        "STOP.M        1660.000000:\n",
-        "['STOP', 'M', '1660.000000', '']\n",
-        "STEP.M            -0.1250:\n",
-        "['STEP', 'M', '-0.1250', '']\n",
-        "NULL.           -999.2500:\n",
-        "['NULL', None, '-999.2500', '']\n",
-        "COMP.             COMPANY:   ANY OIL COMPANY LTD.\n",
-        "['COMP', None, 'COMPANY', 'ANY OIL COMPANY LTD.']\n",
-        "WELL.                WELL:   ANY ET AL OIL WELL #12\n",
-        "['WELL', None, 'WELL', 'ANY ET AL OIL WELL #12']\n",
-        "FLD .               FIELD:   EDAM\n",
-        "['FLD', None, 'FIELD', 'EDAM']\n",
-        "LOC .            LOCATION:   A9-16-49-20W3M\n",
-        "['LOC', None, 'LOCATION', 'A9-16-49-20W3M']\n",
-        "PROV.            PROVINCE:   SASKATCHEWAN\n",
-        "['PROV', None, 'PROVINCE', 'SASKATCHEWAN']\n",
-        "SRVC.     SERVICE COMPANY:   ANY LOGGING COMPANY LTD.\n",
-        "['SRVC', None, 'SERVICE COMPANY', 'ANY LOGGING COMPANY LTD.']\n",
-        "DATE.            LOG DATE:   25-DEC-1988\n",
-        "['DATE', None, 'LOG DATE', '25-DEC-1988']\n",
-        "UWI .      UNIQUE WELL ID:   100091604920W300\n",
-        "['UWI', None, 'UNIQUE WELL ID', '100091604920W300']\n",
         "<class 'las_reader.LASFile'>\n"
        ]
       }
@@ -109,16 +72,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 4,
        "text": [
         "{'name': 'sample_curve_api.las',\n",
         " 'path': None,\n",
-        " 'time_opened': datetime.datetime(2013, 12, 24, 21, 45, 53, 708000),\n",
+        " 'time_opened': datetime.datetime(2013, 12, 25, 13, 22, 35, 89000),\n",
         " 'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las'}"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -139,13 +102,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 5,
        "text": [
         "{'DLM': ' ', 'VERS': 1.2, 'WRAP': False}"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -159,7 +122,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "{'COMP': 'ANY OIL COMPANY LTD.',\n",
         " 'CTRY': None,\n",
@@ -180,7 +143,16 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
