clean up docs folder

--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -64,24 +64,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "log.provenance"
+      "pprint(log.provenance)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "{'name': 'sample_curve_api.las',\n",
-        " 'path': None,\n",
-        " 'time_opened': datetime.datetime(2013, 12, 25, 13, 22, 35, 89000),\n",
-        " 'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las'}"
+        "{'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las', 'path': None, 'time_opened': datetime.datetime(2013, 12, 25, 13, 22, 35, 89000), 'name': 'sample_curve_api.las'}\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -94,7 +90,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "log.version"
+      "print log.version"
      ],
      "language": "python",
      "metadata": {},
@@ -114,7 +110,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "log.well"
+      "print log.well"
      ],
      "language": "python",
      "metadata": {},
