--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -30,67 +30,62 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Read in an example LAS 1.2 file:"
+      "Read in the log file by initializing a ``LASFile`` object with a filename, URL, file-like object, or string:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "log = las_reader.read('https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las')\n",
-      "print type(log)"
+      "log = las_reader.LASFile('https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<class 'las_reader.LASFile'>\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The LASFile object has some provenance information depending on what was read. You can pass the read() function a filename, URL, file-like object, or string."
+      "The ``LASFile`` object will carry some of the originating information in its ``provenance`` attribute:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pprint(log.provenance)"
+      "log.provenance"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
        "text": [
-        "{'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las', 'path': None, 'time_opened': datetime.datetime(2013, 12, 25, 13, 22, 35, 89000), 'name': 'sample_curve_api.las'}\n"
+        "{'name': 'sample_curve_api.las',\n",
+        " 'path': None,\n",
+        " 'time_opened': datetime.datetime(2013, 12, 25, 15, 28, 13, 665000),\n",
+        " 'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las'}"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The version and well sections are present as dictionaries:"
+      "Internally the sections of the LAS file are parsed by a ``LASFileReader`` instance and stored in their raw form under ``log.sections``:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print log.version"
+      "log.sections"
      ],
      "language": "python",
      "metadata": {},
@@ -100,17 +95,124 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "{'DLM': ' ', 'VERS': 1.2, 'WRAP': False}"
+        "{'~A': {},\n",
+        " '~C': {'DEPTH': {'data': '',\n",
+        "   'descr': '1       DEPTH',\n",
+        "   'name': 'DEPTH',\n",
+        "   'unit': 'M'},\n",
+        "  'ILD': {'data': '7 120 46 00',\n",
+        "   'descr': '7       DEEP RESISTIVITY',\n",
+        "   'name': 'ILD',\n",
+        "   'unit': 'OHMM'},\n",
+        "  'ILM': {'data': '7 120 44 00',\n",
+        "   'descr': '6       MEDIUM RESISTIVITY',\n",
+        "   'name': 'ILM',\n",
+        "   'unit': 'OHMM'},\n",
+        "  'MSFL': {'data': '7 220 01 00',\n",
+        "   'descr': '4       Rxo RESISTIVITY',\n",
+        "   'name': 'MSFL',\n",
+        "   'unit': 'OHMM'},\n",
+        "  'NPHI': {'data': '7 890 00 00',\n",
+        "   'descr': '3       NEUTRON POROSITY - SANDSTONE',\n",
+        "   'name': 'NPHI',\n",
+        "   'unit': 'VOL/VOL'},\n",
+        "  'RHOB': {'data': '7 350 02 00',\n",
+        "   'descr': '2       BULK DENSITY',\n",
+        "   'name': 'RHOB',\n",
+        "   'unit': 'K/M3'},\n",
+        "  'SFLA': {'data': '7 222 01 00',\n",
+        "   'descr': '5       SHALLOW RESISTIVITY',\n",
+        "   'name': 'SFLA',\n",
+        "   'unit': 'OHMM'},\n",
+        "  'SP': {'data': '7 010 01 00',\n",
+        "   'descr': '8       SPONTANEOUS POTENTIAL',\n",
+        "   'name': 'SP',\n",
+        "   'unit': 'MV'}},\n",
+        " '~O': 'Note: The logging tools became stuck at 625 meters causing the data\\nbetween 625 meters and 615 meters to be invalid.\\n',\n",
+        " '~P': {'BHT': {'data': '35.5000',\n",
+        "   'descr': 'BOTTOM HOLE TEMPERATURE',\n",
+        "   'name': 'BHT',\n",
+        "   'unit': 'DEGC'},\n",
+        "  'BS': {'data': '200.0000', 'descr': 'BIT SIZE', 'name': 'BS', 'unit': 'MM'},\n",
+        "  'DFD': {'data': '1525.0000',\n",
+        "   'descr': 'DRILL FLUID DENSITY',\n",
+        "   'name': 'DFD',\n",
+        "   'unit': 'K/M3'},\n",
+        "  'FD': {'data': '1000.0000',\n",
+        "   'descr': 'FLUID DENSITY',\n",
+        "   'name': 'FD',\n",
+        "   'unit': 'K/M3'},\n",
+        "  'MATR': {'data': '0.0000',\n",
+        "   'descr': 'NEUTRON MATRIX(0=LIME,1=SAND,2=DOLO)',\n",
+        "   'name': 'MATR',\n",
+        "   'unit': None},\n",
+        "  'MDEN': {'data': '2710.0000',\n",
+        "   'descr': 'LOGGING MATRIX DENSITY',\n",
+        "   'name': 'MDEN',\n",
+        "   'unit': None},\n",
+        "  'RMF': {'data': '0.2160',\n",
+        "   'descr': 'MUD FILTRATE RESISTIVITY',\n",
+        "   'name': 'RMF',\n",
+        "   'unit': 'OHMM'}},\n",
+        " '~V': {'DLM': {'data': 'SPACE'},\n",
+        "  'VERS': {'data': '1.2',\n",
+        "   'descr': 'CWLS LOG ASCII STANDARD -VERSION 1.2',\n",
+        "   'name': 'VERS',\n",
+        "   'unit': None},\n",
+        "  'WRAP': {'data': 'NO',\n",
+        "   'descr': 'ONE LINE PER DEPTH STEP',\n",
+        "   'name': 'WRAP',\n",
+        "   'unit': None}},\n",
+        " '~W': {'COMP': {'data': 'COMPANY',\n",
+        "   'descr': 'ANY OIL COMPANY LTD.',\n",
+        "   'name': 'COMP',\n",
+        "   'unit': None},\n",
+        "  'DATE': {'data': 'LOG DATE',\n",
+        "   'descr': '25-DEC-1988',\n",
+        "   'name': 'DATE',\n",
+        "   'unit': None},\n",
+        "  'FLD': {'data': 'FIELD', 'descr': 'EDAM', 'name': 'FLD', 'unit': None},\n",
+        "  'LOC': {'data': 'LOCATION',\n",
+        "   'descr': 'A9-16-49-20W3M',\n",
+        "   'name': 'LOC',\n",
+        "   'unit': None},\n",
+        "  'NULL': {'data': '-999.2500', 'descr': '', 'name': 'NULL', 'unit': None},\n",
+        "  'PROV': {'data': 'PROVINCE',\n",
+        "   'descr': 'SASKATCHEWAN',\n",
+        "   'name': 'PROV',\n",
+        "   'unit': None},\n",
+        "  'SRVC': {'data': 'SERVICE COMPANY',\n",
+        "   'descr': 'ANY LOGGING COMPANY LTD.',\n",
+        "   'name': 'SRVC',\n",
+        "   'unit': None},\n",
+        "  'STEP': {'data': '-0.1250', 'descr': '', 'name': 'STEP', 'unit': 'M'},\n",
+        "  'STOP': {'data': '1660.000000', 'descr': '', 'name': 'STOP', 'unit': 'M'},\n",
+        "  'STRT': {'data': '1670.000000', 'descr': '', 'name': 'STRT', 'unit': 'M'},\n",
+        "  'UWI': {'data': 'UNIQUE WELL ID',\n",
+        "   'descr': '100091604920W300',\n",
+        "   'name': 'UWI',\n",
+        "   'unit': None},\n",
+        "  'WELL': {'data': 'WELL',\n",
+        "   'descr': 'ANY ET AL OIL WELL #12',\n",
+        "   'name': 'WELL',\n",
+        "   'unit': None}}}"
        ]
       }
      ],
      "prompt_number": 5
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "You can access these directly, but the ``LASFile`` object also provides mediated access through various attributes (like converting numbers to floats or integers, or parsing dates):"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print log.well"
+      "log.version"
      ],
      "language": "python",
      "metadata": {},
@@ -118,37 +220,53 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 10,
        "text": [
-        "{'COMP': 'ANY OIL COMPANY LTD.',\n",
-        " 'CTRY': None,\n",
-        " 'DATE': '25-DEC-1988',\n",
-        " 'FLD': 'EDAM',\n",
-        " 'LOC': 'A9-16-49-20W3M',\n",
-        " 'NULL': -999.25,\n",
-        " 'PROV': 'SASKATCHEWAN',\n",
-        " 'SRVC': 'ANY LOGGING COMPANY LTD.',\n",
-        " 'STEP': -0.125,\n",
-        " 'STEP.UNIT': 'M',\n",
-        " 'STOP': 1660.0,\n",
-        " 'STOP.UNIT': 'M',\n",
-        " 'STRT': 1670.0,\n",
-        " 'STRT.UNIT': 'M',\n",
-        " 'UWI': '100091604920W300',\n",
-        " 'WELL': 'ANY ET AL OIL WELL #12'}"
+        "1.2"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "log.wrap"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "log.delimiter"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "' '"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
