fix to ~O section

--- a/docs/reading and viewing a log file (1.2).ipynb
+++ b/docs/reading and viewing a log file (1.2).ipynb
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -42,7 +42,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -63,16 +63,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "text": [
         "{'name': 'sample_curve_api.las',\n",
         " 'path': None,\n",
-        " 'time_opened': datetime.datetime(2013, 12, 25, 15, 28, 13, 665000),\n",
+        " 'time_opened': datetime.datetime(2013, 12, 25, 16, 18, 53, 573000),\n",
         " 'url': 'https://raw.github.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las'}"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -128,7 +128,8 @@
         "               'descr': '8       SPONTANEOUS POTENTIAL',\n",
         "               'name': 'SP',\n",
         "               'unit': 'MV'}},\n",
-        " '~O': 'Note: The logging tools became stuck at 625 meters causing the data\\nbetween 625 meters and 615 meters to be invalid.\\n',\n",
+        " '~O': ['Note: The logging tools became stuck at 625 meters causing the data',\n",
+        "        'between 625 meters and 615 meters to be invalid.'],\n",
         " '~P': {'BHT': {'data': '35.5000',\n",
         "                'descr': 'BOTTOM HOLE TEMPERATURE',\n",
         "                'name': 'BHT',\n",
@@ -214,7 +215,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -235,13 +236,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 5,
        "text": [
         "1.2"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -255,13 +256,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 6,
        "text": [
         "False"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -275,13 +276,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 7,
        "text": [
         "' '"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
