Improve _d results for curves attribute

--- a/docs/Example usage.ipynb
+++ b/docs/Example usage.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1fba1f7a4b19b7bc7d93e4f85ac9577851b7d12856363e2e4aaae5207b2c534c"
+  "signature": "sha256:abb00814f981b5a109c0d5f262288816f95441ee5e9cd28d6924efd0df3fba38"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -315,6 +315,16 @@
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l.curves._d"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
