--- a/docs/Example usage.ipynb
+++ b/docs/Example usage.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:abb00814f981b5a109c0d5f262288816f95441ee5e9cd28d6924efd0df3fba38"
+  "signature": "sha256:0bb3c8a7a086c86b87868aa4b066bbff65165186a2436e7a828d6a651fe751c0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -117,8 +117,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "67844832\n",
-        "67844880\n"
+        "68114696\n",
+        "68114744\n"
        ]
       }
      ],
@@ -138,8 +138,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "67844976\n",
-        "67845024\n"
+        "68114840\n",
+        "68114888\n"
        ]
       }
      ],
@@ -324,7 +324,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "{'DEPTH': '1       DEPTH',\n",
+        " 'ILD': '7       DEEP RESISTIVITY',\n",
+        " 'ILM': '6       MEDIUM RESISTIVITY',\n",
+        " 'MSFL': '4       Rxo RESISTIVITY',\n",
+        " 'NPHI': '3       NEUTRON POROSITY - SANDSTONE',\n",
+        " 'RHOB': '2       BULK DENSITY',\n",
+        " 'SFLA': '5       SHALLOW RESISTIVITY',\n",
+        " 'SP': '8       SPONTANEOUS POTENTIAL'}"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -338,7 +355,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 13,
        "text": [
         "{'BHT': Parameter(unit='DEGC', value=35.5, descr='BOTTOM HOLE TEMPERATURE'),\n",
         " 'BS': Parameter(unit='MM', value=200.0, descr='BIT SIZE'),\n",
@@ -350,7 +367,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -371,7 +388,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 14,
        "text": [
         "{'BHT': 35.5,\n",
         " 'BS': 200.0,\n",
@@ -397,7 +414,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -424,7 +441,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -445,16 +462,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 16,
        "text": [
         "{'name': 'sample_curve_api.las',\n",
         " 'path': None,\n",
-        " 'time_opened': datetime.datetime(2014, 4, 6, 12, 34, 42, 851000),\n",
+        " 'time_opened': datetime.datetime(2014, 4, 6, 12, 43, 35, 101000),\n",
         " 'url': 'https://raw.githubusercontent.com/kinverarity1/las-reader/master/standards/examples/1.2/sample_curve_api.las'}"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
