Update the example ipynb

--- a/docs/Example usage.ipynb
+++ b/docs/Example usage.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:08878fec67715abb1703a41c299d15d005892f4aa8f1fd4f8d8522b341197e9a"
+  "signature": "sha256:cca0055ed7009d41c98ee3b30d0b454e39f4344a784bbfe66c16dc818a85975d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,8 +21,21 @@
      "metadata": {},
      "source": [
       "``las_reader`` is a Python package to read in Log ASCII Standard (LAS) files, used in geophysical logging. \n",
-      "The file format is specified by the Canadian Well Logging Society. The package only works for versions 1.2 and 2.0 so far.\n",
-      "\n",
+      "The file format is specified by the Canadian Well Logging Society. The package only works for versions 1.2 and 2.0 so far."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Reading in data"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "The ``las_reader.read()`` function accepts a filename, file-like object, or URL as an argument and returns a ``Las`` object:"
      ]
     },
@@ -48,6 +61,14 @@
       }
      ],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Curve data"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -117,8 +138,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "51873176\n",
-        "51873224\n"
+        "48203616\n",
+        "48203664\n"
        ]
       }
      ],
@@ -138,8 +159,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "51873320\n",
-        "51873368\n"
+        "48203760\n",
+        "48203808\n"
        ]
       }
      ],
@@ -173,10 +194,49 @@
      "prompt_number": 6
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Header information"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Metadata from the LAS file's header is stored in a special kind of dictionary, one for each section (``version``, ``well``, ``curves``, and ``params``). Each line of a metadata has a particular type depending on its section (``Metadata``, ``Curve``, or ``Parameter``). The latter types are named tuples created using ``collections.namedtuple``. The value of any bit of metadata can always be accessed with the ``value`` attribute:"
+      "Metadata from the LAS file's header is stored in an ``OrderedDictionary`` attribute, one for each section (``version``, ``well``, ``curves``, and ``params``). ``OrderedDictionary`` objects are just what they sound like: very similar to a normal Python dictionary.\n",
+      "\n",
+      "Each entry in the header sections is a kind of custom Python object which depends on the section of the LAS header in which it occurs: either a ``Metadata``, ``Curve``, or ``Parameter``. All these are very similar though; they inherited from the ``las_reader.recordtype`` class, which is a *mutable named tuple*. It sounds way more complex than it is:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m = las_reader.las.Metadata(unit='m/sec', value=3 * 10 ** 5, descr='The speed of light')\n",
+      "m.value = 3 * 10 ** 8\n",
+      "m.unit = 'm/s'\n",
+      "print m"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Metadata(unit='m/s', value=300000000, descr='The speed of light')\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In order from top to bottom as they usually are in LAS files, the section attributes are:"
      ]
     },
     {
@@ -255,7 +315,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A simpler way of viewing this is to use the special ``_d`` attribute of each section's dictionary:"
+      "A simpler way of viewing this is to use the special ``_d`` attribute of each section's dictionary, but note that any changes to this dictionary do not have any effect:"
      ]
     },
     {
@@ -270,7 +330,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 11,
        "text": [
         "{'COMP': 'ANY OIL COMPANY LTD.',\n",
         " 'DATE': '25-DEC-1988',\n",
@@ -287,7 +347,85 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l.well._d['SRVC'] = 'My logging company.'\n",
+      "l.well._d"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "{'COMP': 'ANY OIL COMPANY LTD.',\n",
+        " 'DATE': '25-DEC-1988',\n",
+        " 'FLD': 'EDAM',\n",
+        " 'LOC': 'A9-16-49-20W3M',\n",
+        " 'NULL': -999.25,\n",
+        " 'PROV': 'SASKATCHEWAN',\n",
+        " 'SRVC': 'ANY LOGGING COMPANY LTD.',\n",
+        " 'STEP': -0.125,\n",
+        " 'STOP': 1660.0,\n",
+        " 'STRT': 1670.0,\n",
+        " 'UWI': '100091604920W300',\n",
+        " 'WELL': 'ANY ET AL OIL WELL #12'}"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Instead you have to edit the ``Metadata`` object explicitly (for now):"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l.well['SRVC'].value = 'My logging company (2nd try)'\n",
+      "l.well._d"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "{'COMP': 'ANY OIL COMPANY LTD.',\n",
+        " 'DATE': '25-DEC-1988',\n",
+        " 'FLD': 'EDAM',\n",
+        " 'LOC': 'A9-16-49-20W3M',\n",
+        " 'NULL': -999.25,\n",
+        " 'PROV': 'SASKATCHEWAN',\n",
+        " 'SRVC': 'My logging company (2nd try)',\n",
+        " 'STEP': -0.125,\n",
+        " 'STOP': 1660.0,\n",
+        " 'STRT': 1670.0,\n",
+        " 'UWI': '100091604920W300',\n",
+        " 'WELL': 'ANY ET AL OIL WELL #12'}"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Success! The other sections have slightly different classes for records:"
+     ]
     },
     {
      "cell_type": "code",
@@ -373,7 +511,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For convenience there's a special attribute which is an ordinary dictionary that brings together all the metadata in the file:"
+      "For convenience there's a special attribute which is an ordinary dictionary that brings together all the metadata in the file. Again, changes to this dictionary have no effect."
      ]
     },
     {
